// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountManagement container should render with a full access type 1`] = `
<DocumentFragment>
  <div
    class="white-background account-management"
  >
    <div
      class="container"
    >
      <div
        class="quill-snackbar "
      />
      <div
        class="header"
      >
        <h1>
          Account Management
        </h1>
        <button
          class="quill-button contained medium focus-on-light primary"
          type="button"
        >
          Create and link accounts
        </button>
      </div>
      <div
        class="dropdown-container input-container inactive   page-school-selector searchable "
        role="button"
        tabindex="0"
      >
        <label />
        <div
          class="dropdown css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="dropdown__control css-13cymwt-control"
          >
            <div
              class="dropdown__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="dropdown__placeholder css-1jqq78o-placeholder"
                id="react-select-2-placeholder"
              />
              <div
                class="dropdown__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-2-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="dropdown__input"
                  id="react-select-2-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="dropdown__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="dropdown__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="dropdown__indicator dropdown__dropdown-indicator css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="data-table-wrapper"
      >
        <table
          class="data-table reporting-format"
        >
          <thead>
            <tr
              class="data-table-headers"
            >
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 394px; min-width: 394px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Name
                  </span>
                  <div
                    class="sort-tooltip-container"
                  />
                </button>
              </th>
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 180px; min-width: 180px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Role
                  </span>
                  <div
                    class="sort-tooltip-container"
                  >
                    <img
                      alt="arrow"
                      class="sort-arrow asc"
                      src="https://assets.quill.org/images/icons/icons-arrow.svg"
                    />
                  </div>
                </button>
              </th>
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 180px; min-width: 180px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Students
                  </span>
                  <div
                    class="sort-tooltip-container"
                  />
                </button>
              </th>
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 180px; min-width: 180px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Activities Completed
                  </span>
                  <div
                    class="sort-tooltip-container"
                  />
                </button>
              </th>
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 180px; min-width: 180px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Time Spent
                  </span>
                  <div
                    class="sort-tooltip-container"
                  />
                </button>
              </th>
              <th
                class="data-table-header actions-header"
                scope="col"
              >
                Actions
              </th>
            </tr>
          </thead>
          <tbody
            class="data-table-body"
          />
        </table>
        <p
          class="warning-section"
        >
          <span
            class="warning"
          >
            Warning:
          </span>
           Any changes you make when you access a teacher account will impact the teacher and student facing dashboards. This list provides you with the ability to sign in to all of the teacher accounts for the schools you have admin access. 
          <strong>
            The data above represents usage from this school year, beginning July 1st.
          </strong>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AccountManagement container should render with a limited access type 1`] = `
<DocumentFragment>
  <div
    class="white-background account-management"
  >
    <div
      class="container"
    >
      <div
        class="quill-snackbar "
      />
      <div
        class="header"
      >
        <h1>
          Account Management
        </h1>
        <button
          class="quill-button contained medium focus-on-light primary"
          type="button"
        >
          Create and link accounts
        </button>
      </div>
      <div
        class="dropdown-container input-container inactive   page-school-selector searchable "
        role="button"
        tabindex="0"
      >
        <label />
        <div
          class="dropdown css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-3-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="dropdown__control css-13cymwt-control"
          >
            <div
              class="dropdown__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="dropdown__placeholder css-1jqq78o-placeholder"
                id="react-select-3-placeholder"
              />
              <div
                class="dropdown__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-3-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="dropdown__input"
                  id="react-select-3-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="dropdown__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="dropdown__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="dropdown__indicator dropdown__dropdown-indicator css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="data-table-wrapper"
      >
        <table
          class="data-table reporting-format"
        >
          <thead>
            <tr
              class="data-table-headers"
            >
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 394px; min-width: 394px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Name
                  </span>
                  <div
                    class="sort-tooltip-container"
                  />
                </button>
              </th>
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 180px; min-width: 180px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Role
                  </span>
                  <div
                    class="sort-tooltip-container"
                  >
                    <img
                      alt="arrow"
                      class="sort-arrow asc"
                      src="https://assets.quill.org/images/icons/icons-arrow.svg"
                    />
                  </div>
                </button>
              </th>
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 180px; min-width: 180px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Students
                  </span>
                  <div
                    class="sort-tooltip-container"
                  />
                </button>
              </th>
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 180px; min-width: 180px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Activities Completed
                  </span>
                  <div
                    class="sort-tooltip-container"
                  />
                </button>
              </th>
              <th
                class="data-table-header undefined sortable"
                scope="col"
                style="width: 180px; min-width: 180px; text-align: right;"
              >
                <button
                  class="interactive-wrapper focus-on-light"
                  type="button"
                >
                  <span>
                    Time Spent
                  </span>
                  <div
                    class="sort-tooltip-container"
                  />
                </button>
              </th>
              <th
                class="data-table-header actions-header"
                scope="col"
              >
                Actions
              </th>
            </tr>
          </thead>
          <tbody
            class="data-table-body"
          />
        </table>
        <p
          class="warning-section"
        >
          <span
            class="warning"
          >
            Warning:
          </span>
           Any changes you make when you access a teacher account will impact the teacher and student facing dashboards. This list provides you with the ability to sign in to all of the teacher accounts for the schools you have admin access. 
          <strong>
            The data above represents usage from this school year, beginning July 1st.
          </strong>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AccountManagement container should render with a restricted access type 1`] = `
<DocumentFragment>
  <div
    class="white-background account-management"
  >
    <div
      class="container"
    >
      <div
        class="quill-snackbar "
      />
      <div
        class="header"
      >
        <h1>
          Account Management
        </h1>
        <button
          class="quill-button contained medium focus-on-light primary"
          type="button"
        >
          Create and link accounts
        </button>
      </div>
      <div
        class="restricted"
      >
        <img
          alt="Gray lock"
          src="undefined/images/pages/administrator/premium_lock.svg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
